test/files/pos/t6978/J.java

public class J {
    public int f() { return 42; }
}

